Update CommerceDAO.java